--- a/plenos/12-02-2016.html
+++ b/plenos/12-02-2016.html
@@ -38,7 +38,7 @@
 
         <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cis2277.htm" target="_blank">Moción completa</a>
 
-        <p class="padding-1-0">Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial.</p>
+        <p>Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial.</p>
 
         <div id="mocion10"></div>
       </article>
