incluyendo colores en las mociones impares | añadiendo un target=_blank para los enlaces que acaban fuera de bislai

--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -44,7 +44,7 @@
       </article>
     </section>
 
-    <section class="border-t1 borderc-grey w-100">
+    <section class="border-t1 borderc-grey w-100 cruise">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 11 · Presentada por Chunta Aragonesista</h3>
 
@@ -68,7 +68,7 @@
       </article>
     </section>
 
-    <section class="border-t1 borderc-grey w-100">
+    <section class="border-t1 borderc-grey w-100 cruise">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 13 · Presentada por el Partido Socialista Obrero Español</h3>
 
@@ -103,7 +103,7 @@
       </article>
     </section>
 
-    <section class="border-t1 borderc-grey w-100">
+    <section class="border-t1 borderc-grey w-100 cruise">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 15 · Presentada por el Partido Socialista Obrero Español</h3>
 
@@ -133,7 +133,7 @@
       </article>
     </section>
 
-    <section class="border-t1 borderc-grey w-100">
+    <section class="border-t1 borderc-grey w-100 cruise">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 17 · Presentada por el Partido Popular</h3>
 
@@ -174,7 +174,7 @@
       </article>
     </section>
 
-    <section class="border-t1 borderc-grey w-100">
+    <section class="border-t1 borderc-grey w-100 cruise">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 19 · Presentada por Ciudadanos</h3>
 
@@ -205,8 +205,8 @@
       </article>
     </section>
 
-      <footer class="margin-y1 borderc-grey border-t1">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com">maño</a> - 2017</p>
+      <footer class="padding-1-0 borderc-grey border-t1 cruise">
+        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     <script type="text/javascript" src="../js/d3.min.js"></script>
     <script type="text/javascript" src="../js/c3.min.js"></script>
