--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -30,7 +30,7 @@
       <canvas id="zec" width="400" height="400"></canvas>
 
       <footer class="margin-y1 borderc-grey border-t1">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com">maño</a> - 2017</p>
+        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/psoe.js"></script>
