--- a/plenos/02-12-2016.html
+++ b/plenos/02-12-2016.html
@@ -23,8 +23,8 @@
     </header>
 
     <section class="maw-70 margin-y1 display-b">
-      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
-      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=671">Acuerdos</a>
+      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=602" target="_blank">Orden del día</a>
+      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=658" target="_blank">Acuerdos</a>
 
       <div class="margin-y1">
         <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
@@ -34,13 +34,148 @@
 
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
-        <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 10 · Presentada por Ciudadanos</h3>
+        <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 24 · Presentada por Ciudadanos</h3>
 
-        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cis2277.htm" target="_blank">Moción completa</a>
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/cis1974.htm" target="_blank">Moción completa</a>
 
-        <p>Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial.</p>
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>El Pleno del Ayuntamiento de Zaragoza insta a la consejera Municipal de Participación Ciudadana del Ayuntamiento de Zaragoza, doña Elena Giner, a que la muestra de la encuesta sobre el trazado de la línea 2 del tranvía, sea realmente representativa del conjunto de individuos de la ciudad, contemplando un sistema de umbrales de participación que definan el peso de la misma dentro de la matriz multicriterio, y que la ficha técnica de la misma esté verificada por un perito con experiencia demostrada en la materia.</p>
 
-        <div id="mocion10"></div>
+        <div id="mocion24"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>El Pleno del Ayuntamiento de Zaragoza insta al Gobierno de la ciudad a presentar una guía metodológica que recoja los criterios recomendados para el diseño, desarrollo y explotación de los datos de las encuestas de opinión, en el marco del artículo 54 del Reglamento de Participación y su futura reforma, diferenciando bien lo que son encuestas de opinión de lo que son procesos participativos.</p>
+
+        <div id="mocion24-2"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 3.</span>El Pleno del Ayuntamiento de Zaragoza insta a la Consejera municipal de Participación ciudadana del Ayuntamiento de Zaragoza Dª. Elena Giner a que constituya una mesa de seguimiento con representantes de todos los grupos municipales y agentes sociales miembros de la Comisión de Participación Ciudadana, así como algunos técnicos municipales para que en tiempo real, podamos ver el progreso de la encuesta.</p>
+
+        <div id="mocion24-3"></div>
+      </article>
+    </section>
+
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 25 · Presentada por Ciudadanos</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/cis2001.htm" target="_blank">Moción completa</a>
+
+        <p class="padding-1-0 border-t1 borderc-grey">Instar al Alcalde de la ciudad y a su Consejero de Urbanismo a establecer contacto de forma urgente en el ministro de Fomento a fin de abordar la solución de los problemas derivados de titularidad de la avenida Santa Isabel y de la avenida Cataluña, tramo comprendido entre los números 160 al 301.</p>
+
+        <div id="mocion25"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 26 · Presentada por Chunta Aragonesista</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/cha2028.htm" target="_blank">Moción completa</a>
+
+        <p class="padding-1-0 border-t1 borderc-grey">El Pleno del Ayuntamiento de Zaragoza insta al Gobierno de la ciudad a estudiar conforme a los intereses de la ciudad y desde un punto de vista económico las modificaciones aisladas del Plan General de Ordenación Urbana que contemplen la actualización de la definición de tramos urbanos y tramos de travesía en las carreteras que discurren por el término municipal zaragozano.</p>
+
+        <div id="mocion26"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 27 · Presentada por Chunta Aragonesista</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/cha2039.htm" target="_blank">Moción completa</a>
+
+        <p>El Pleno del Ayuntamiento inste al Gobierno de la ciudad a adoptar las medidas necesarias para garantizar la prestación del Servicio de Atención Telefónica 010 de manera que se asegure la prestación del mismo a partir de 1 de enero de 2017 y el mantenimiento de los puestos de trabajo. Así mismo el Ayuntamiento insta al Gobierno de la ciudad a exigir a la empresa el pago de las nóminas adeudas a las 14 trabajadoras de manera inmediata.</p>
+
+        <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente.</span>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 28 · Presentada por el Partido Popular</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/pp2158.htm" target="_blank">Moción completa</a>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>El Pleno del Ayuntamiento de Zaragoza rechaza ampliar de forma generalizada a los barrios de la ciudad las zonas de estacionamiento regulado (zona azul y zona naranja). Igualmente, rechaza un incremento de las tarifas actuales.</p>
+
+        <div id="mocion28"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>El Pleno del Ayuntamiento de Zaragoza insta al Gobierno de la Ciudad a promover el uso del transporte público adoptando las siguientes mejoras en el servicio del autobús:
+        <ul>
+          <li>Ampliar y optimizar la red de autobús para garantizar su competitividad, llegar a todos los ámbitos urbanos que no cuenten con una cobertura suficiente y reducir el tiempo de los desplazamientos, implantando una red mallada con líneas circulares y líneas radiales exprés que conecten rápidamente los principales puntos neurálgicos y nodos de intercambio.</li>
+          <li>Incorporar la prioridad semafórica y ampliar la red de carriles-bus, compartida con otros servicios públicos.</li>
+          <li>Racionalizar y reordenar la red de transporte público de autobuses, incorporando vehículos biarticulados en las líneas de mayor demanda.</li>
+          <li>Recuperar la regularidad y frecuencia en las líneas de mayor demanda, para que las esperas sean inferiores a 5 minutos en las líneas de la red principal.</li>
+          <li>Impulsar la renovación de la flota con autobuses de combustibles limpios y eléctricos.</li>
+          <li>Equipar progresivamente con marquesina todas las paradas de autobús.</li>
+        </ul>
+
+        </p>
+
+        <div id="mocion28-2"></div>
+
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 29 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/psoe2159.htm" target="_blank">Moción completa</a>
+
+        <p>Instar al Gobierno de Zaragoza a desarrollar medidas tendentes a reforzar los planes y sistemas de formación del personal municipal así como a desplegar mecanismos de evaluación y dignificación de la carrera profesional.</p>
+
+        <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente.</span>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 30 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones021216/psoe2160.htm" target="_blank">Moción completa</a>
+
+        <p>Requerir al Gobierno de Zaragoza y particularmente al Alcalde de la ciudad, en su condición de presidente de la sociedad municipal Zaragoza@Desarrollo Expo, S.A., para que en el plazo de un mes convoque junta general de la misma con el fin de acordar su disolución y el nombramiento de los liquidadores.</p>
+
+        <div id="mocion30"></div>
+      </article>
+    </section>
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción de urgencia · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de la ciudad a constituir en el plazo máximo de 15 días una mesa formada por representantes de todos los grupos políticos, así como por técnicos de Movilidad y Policía Local, que aborde de inmediato la elaboración de un borrador para la revisión de las ordenanzas de tráfico y ciclistas y peatones, con el fin de dotar de un marco legal y estable a la circulación de bicicletas.</p>
+
+        <div id="mocion31"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 2.</span>Acometer en el marco del Plan de Movilidad Urbana Sostenible, la elaboración de una estrategia municipal de la bicicleta que aborde los criterios a seguir en el desarrollo de infraestructuras ciclistas, atendiendo a criterios como la demanda, la posibilidad de pacificar vías y los cauces de participación con especial reconocimiento al papel de las juntas municipales de distrito y vecinales.</p>
+
+        <div id="mocion31-2"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 3.</span>El Pleno del Ayuntamiento de Zaragoza rechaza la utilización partidista del Observatorio de la Bicicleta y reitera la mayoría que se produjo en su última reunión celebrada el 23 de noviembre, en contra de la construcción de dos carriles bici en el Coso Alto en el tramo entre la Plaza de España y la avenida de César Augusto.</p>
+
+        <div id="mocion31-3"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 4.</span>Instar al Gobierno de España a impulsar, a la mayor brevedad, una reforma del Reglamento General de Circulación, que incluya un título dedicado a la circulación de bicicletas, en el que se recojan las necesidades y particularidad de este vehículo no motorizado, con la perspectiva de facilitar la extensión de su uso de una forma segura y eficiente.</p>
+
+        <div id="mocion31-4"></div>
+
+        <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 5.</span> Instar al Gobierno de España a que el contenido de dicha reforma sea consensuado con la Red de Ciudades por la Bicicleta y con las entidades que forman la Mesa Nacional de la Bicicleta, representantes de los diversos sectores relacionados con el ciclismo, y sirva para respaldar y dar cobertura al esfuerzo de promoción del uso de la bicicleta que han realizado numerosas ciudades.</p>
+
+        <div id="mocion31-5"></div>
+      </article>
+    </section>
+
+
+    <section class="border-t1 borderc-grey w-100">
+      <article class="maw-70 padding-1-0">
+        <h3 class="border-t10 border-b10 borderc-zec padding-1-0 display-ib margin-b0">Moción de urgencia · Presentada por Zaragoza en Común</h3>
+
+        <p>El Pleno del Ayuntamiento de Zaragoza insta a la Delegación de Gobierno a retirar el requerimiento que solicita la anulación de una serie de artículos del pacto-convenio y del convenio colectivo municipal.</p>
+
+        <p>El Pleno del Ayuntamiento de Zaragoza hace una defensa de la negociación colectiva, la recuperación de derechos de los trabajadores públicos, y de la autonomía municipal para regular las condiciones laborales de los trabajadores municipales, siempre en el marco de la negociación colectiva y el respeto al marco jurídico en vigo.</p>
+
+        <div id="mocion32"></div>
       </article>
     </section>
 
