--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -23,8 +23,8 @@
     </header>
 
     <section class="maw-70 margin-y1 display-b">
-      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651">Orden del día</a>
-      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=671">Acuerdos</a>
+      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651" target="_blank">Orden del día</a>
+      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=671" target="_blank">Acuerdos</a>
 
       <div class="margin-y1">
         <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
