datos de los plenos hasta el 27 de mayo

--- a/plenos/22-07-2016.html
+++ b/plenos/22-07-2016.html
@@ -45,6 +45,22 @@
     </section>
 
 
+    Mociones
+
+    2 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/cis1577.htm
+    3 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/cis1578.htm
+    4 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/cha1580.htm
+    5 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/pp1590.htm
+    6 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/pp1613.htm
+    7 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/zec1619.htm
+    8 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/cis1636.htm
+    9 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/psoe1637.htm
+    10 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/zec1638.htm
+    11 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/psoe1640.htm
+    12 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/psoe1641.htm
+    13 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones220716/pp1642.htm
+
+
       <footer class="padding-1-0 borderc-grey border-t1 cruise">
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
