plenos de enero

--- a/plenos/28-01-2016.html
+++ b/plenos/28-01-2016.html
@@ -23,8 +23,8 @@
     </header>
 
     <section class="maw-70 margin-y1 display-b">
-      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/detalleAnexo_AgendaInstitucional?id=651" target="_blank">Orden del día</a>
-      <a href="https://www.zaragoza.es/ciudad/organizacion/detalleAnexo_AgendaInstitucional?id=671" target="_blank">Acuerdos</a>
+      <a class="padding-r1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/ver_Fehaciente?id=46599" target="_blank">Orden del día</a>
+      <a href="http://www.zaragoza.es/ciudad/organizacion/plenos/ver_Fehaciente?id=47017" target="_blank">Acuerdos</a>
 
       <div class="margin-y1">
         <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co/plenos/&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
@@ -43,6 +43,39 @@
         <div id="mocion10"></div>
       </article>
     </section>
+
+    MOCIONES
+    2. Presentada por el grupo municipal Popular en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad y a la Diputación Provincial a formar la comisión técnica mixta para acelerar los trabajos que permitan tener listo un convenio para los barrios rurales en el plazo de tres meses. (P-733/16).-Votación por separado de los puntos.-Punto 1, aprobado por unanimidad. Punto 2.-Total, 25 votos a favor (PP/C¨s/ZEC/CHA) y 6 votos en contra (PSOE).- Queda probado.
+    3. Presentada por el grupo municipal Ciudadanos-Partido de la Ciudadanía en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a revisar y aplicar la actual Estrategia Internacional aprobada en 2012, que nunca fue implementada. ((P-754/16).- Unanimidad.
+    4. Presentada por el grupo municipal Popular en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de Zaragoza a revisar los servicios mínimos establecidos en la presente huelga del transporte urbano de la ciudad, garantizando unos servicios mínimos que no bajen del 50%. (P-755/16).-Debate conjunto con la moción 15.-Moción 4 el PSOE presenta transaccional que acepta el PP.-Total 20 votos a favor PP/PSOE/C´s/ y 11 votos en contra (ZEC/CHA).­Queda aprobada.la moción transada
+    5. Presentada por el grupo municipal Popular en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de Zaragoza a suprimir el Observatorio de la Contratación, y a regular el funcionamiento de la Comisión de Vigilancia de la Contratación. (P-756/16).-El grupo municipal Socialista presenta transaccionales que son aceptadas por el grupo Popular.-Votación separada puntos.-Punto 1.-Total 19 votos a favor (PP/PSOE/C´s) y 11 votos en contra (ZEC/CHA).- Punto 2.- Unanimidad..- Queda aprobada la moción transada.
+    6. Presentada por el grupo municipal Socialista en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al gobierno de Zaragoza a iniciar los trámites para la aprobación de un plan de comercio consensuado con todos los grupos municipales y participado por los sectores afectados. (P-757/16).-Conforme alartículo 80 del Reglamento de Órganos Territoriales y de Participación Ciudadana en el Ayuntamiento de Zaragoza interviene en el Pleno D. José Antonio Pueyo en representación de la Federación de Empresarios de Comercio y Servicios de Zaragoza y provincia ECOS.- Unanimidad.­
+    7. Presentada por el grupo municipal Socialista en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a constituir una mesa de trabajo con los grupos políticos, que valore e informe todas las cuestiones relacionadas con enajenaciones y cesiones de suelos. (P-758/16).-Debate y votación conjunta con la moción 10.-Queda aprobada por unanimidad.
+    8. Presentada por el grupo municipal Ciudadanos-Partido de la Ciudadanía en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a que se comprometa a responder en un plazo de 60 días a las nuevas peticiones/sugerencias/solicitudes con origen, el Justicia de Aragón. (P-759/16).­Unanimidad.
+    9. Presentada por el grupo municipal Socialista en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste a los grupos políticos con representación en las Cortes Generales a priorizar una agenda de cambio y regeneración política que responda a la voluntad mayoritaria de la ciudadanía expresada en las pasadas elecciones. (P-760/16).-Debate conjunto con la moción nº 14.- Votación separada puntos.-Punto 1.- Total 21 votos a favor (PSOE/CHA/ZEC).-Punto 2.1.-Total 17 votos a favor (CHA/PSOE/ZEC).-9 votos en contra (PP) y 4 abstenciones (C´s).­Punto 2.2.-Total 21 votos a favor /PSOE/CHA/ZEC) 9 votos en contra (PP).­Punto 2.3.-Total 21 votos a favor (PSOE/CHA/ZEC) y 9 votos en contra (PP).­Punto 2.4.-Total 21 votos a favor (PSOE/CHA/ZEC) y 9 votos en contra (PP).­Punto 2.5.-Total 17 votos a favor (CHA/PSOE/ZEC), 9 votos en contra PP y 4 abstenciones (C´s).- Queda aprobada.
+    10. Presentada por el grupo municipal Popular, en el sentido de que el Pleno del Ayuntamiento de Zaragoza acuerde reactivar la comisión para la venta de patrimonio con el objetivo de buscar nuevos ingresos para las arcas municipales. (P-761/16).-Debate y votación conjunta con la moción 7.-Queda aprobada por unanimidad.
+    11. Presentada por el grupo municipal Ciudadanos-Partido de la Ciudadanía en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a impulsar la creación de una unidad específica para la violencia de género dentro de la Policía Local de Zaragoza. (P-762/16).-El grupo municipal Zaragoza en Común presenta transaccional aceptada por el grupo proponente.-Total 27 votos a favor (PP/PSOE/ZEC/C´s) y 2 abstenciones CHA.-Queda aprobada la moción transada.
+    12. Presentada por el grupo municipal de Chunta Aragonesista, en el sentido de que el Pleno del Ayuntamiento de Zaragoza muestre su apoyo a la Iniciativa Legislativa Popular que se ha puesto en marcha desde el tejido social y sindical, para establecer una prestación de ingresos mínimos en el ámbito de la protección de la Seguridad Social. (P-763/16).-Votación separada de los puntos.-Punto 1.-Total 17 votos a favor (PSOE/CHA/ZEC) y 13 abstenciones (PP y C´s).-Punto 2.-Total 17 votos a favor (PSOE/CHA/ZEC) 4 votos en contra (C´s) y 9 abstenciones (PP).- Punto 3.- Total 17 votos a favor (PSOE/CHA/ZEC) y 13 abstenciones (PP y C´s).- Queda aprobada.
+    13. Presentada por el grupo municipal de Chunta Aragonesista en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a destinar el aprovechamiento urbanístico municipal del 10% al que viene obligada la propietaria del suelo del sector 45/4 a la rehabilitación de ámbito definido por calle Río Alcanadre, avenida Almozara, calle Sierra Vicor y calle Río Guadiana.(P-764/16).-Conforme al artículo 80 del Reglamento de Órganos Territoriales y de Participación Ciudadana en el Ayuntamiento de Zaragoza, interviene en el Pleno Dª. Encarna Mihi Tejedor en representación de la A.VV. Río Ebro Almozara.- No se aprueba.
+    14. Presentada por el grupo municipal de Zaragoza en Común en el sentido de que el Ayuntamiento de Zaragoza inste a las Cortes Generales a impulsar las medidas legislativas necesarias para derogar la LOMCE, la reforma laboral, la Ley de Seguridad ciudadana, la Ley Orgánica del Poder Judicial, la reforma de la Ley de Aborto y el art.135 de la Constitución. (P-765/2016).-Debate en conjunto con la moción nº9.- Total 17 votos a favor (CHA/PSOE/ZEC) 9 votos en contra (PP) y 4 abstenciones (C´s).- Queda aprobada.
+    15. Presentada por el grupo municipal Socialista en el sentido de que el Pleno del Ayuntamiento de Zaragoza inste al Gobierno de la ciudad a revisar de inmediata -en las próximas 24 horas-los servicios mínimos decretados al comienzo de la huelga de trabajadores de Auzsa, los cuales se han demostrado insuficientes causando evidentes perjuicios a la ciudadanía. (P-766/2016).-Conforme al artículo 80 del Reglamento de Órganos Territoriales y de Participación Ciudadana en el Ayuntamiento de Zaragoza interviene en el Pleno D. Javier Anadón Tapia, en representación del sindicato Colectivo Unitario de Trabajadores (CUT).-Se procede al debate en conjunto con la moción nº 4.-Total 20 votos a favor (PP/PSOE/C´s) 11 votos en contra (ZEC/CHA).- Queda aprobada.­
+
+    2 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/pp-733.htm
+    3 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/cis-754.htm
+    4 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/pp-755.htm
+    5 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/pp-756.htm
+    6 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/psoe-757.htm
+    7 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/psoe-758.htm
+    8 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/cis-759.htm
+    9 http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/psoe-760.htm
+    10  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/pp-761.htm
+    11  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/cis-762.htm
+    12  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/cha-763.htm
+    13  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/cha-764.htm
+    14  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/zec-765.htm
+    15  http://www.zaragoza.es/ciudad/organizacion/plenos/mociones28012016/psoe-766.htm
+
+
 
 
       <footer class="padding-1-0 borderc-grey border-t1 cruise">
