actualizando la estructura de los partidos

--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +9,16 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body class="cruise2">
+<body>
     <div class="container">
-      <header class="font-0">
-          <h1 class="heath  title-size  margin-y0  bold display-ib vertical-am  w-50">Bislai
-          <p class="margin-y0  font-1  whs-nw  margin-t-2">Como gestionan tu voto los diferentes partidos del Ayuntamiento de Zaragoza</span></h1>
-          <div class="display-ib  vertical-am  w-50  texta-r">
-              <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
-              <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
-          </div>
+      <header class="font-0 border-b1 borderc-grey w-100">
+            <div class="maw-60">
+              <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+              <div class="w-50 display-ib texta-r">
+                <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+                <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
+              </div>
+            </div>
       </header>
       <img class="object-fit" src="../img/logo-pp.png" alt="Logotipo del Partido Popular">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Popular</span> en el Ayuntamiento de Zaragoza.
@@ -26,8 +26,8 @@
 
       <canvas id="zec" width="400" height="400"></canvas>
 
-      <footer class="padding-1-0 borderc-grey border-t1 cruise">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
+      <footer class="padding-1-0 borderc-grey border-t1 grey">
+        <p class="maw-60 padding-1-0">Hecho en la antigua <a href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
