romanes eunt domus

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -30,7 +30,7 @@
 
 
       <footer class="padding-1-0 borderc-grey border-t1 cruise">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
+        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
