--- a/partidos/cs.html
+++ b/partidos/cs.html
@@ -11,7 +11,6 @@
 </head>
 
 <body >
-    <div class="container">
       <header class="font-0 border-b1 borderc-grey w-100">
             <div class="maw-60">
               <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
@@ -21,6 +20,7 @@
               </div>
             </div>
       </header>
+      <div class="maw-60 margin-y1 display-b">
 
       <img class="object-fit" src="../img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
       <p class="font-1">A continuación un gráfico de las votaciones de <span class="font-w8">Ciudadanos - Partido de la Ciudadanía</span> en el Ayuntamiento de Zaragoza.
@@ -29,7 +29,7 @@
       <canvas id="zec" width="400" height="400"></canvas>
 
       <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
+        <p class="maw-60 padding-1-0">Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
