cambios en el footer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
           <div id="cha" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
           <span class="black  font-w8">6.78% · 2 concejales</span>
           </div>
+
+          <div class="display-b w-100">
+          <a href="partidos/resto.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
+          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
+          <span class="black  font-w8">10.83%</span>
+          </div>
+
       </article>
       </div>
 
