--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -28,7 +28,7 @@
       <canvas id="zec" width="400" height="400"></canvas>
 
       <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
+        <p class="maw-60 padding-1-0">© Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
