estructura para el calendario de la pagina principal

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <div class="display-b w-100">
           <a href="partidos/resto.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
-          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
+          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  grey  margin-r1"></div>
           <span class="black  font-w8">10.83%</span>
           </div>
 
@@ -71,6 +71,29 @@
 
         <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey">
           <h2 class="font-4 margin-b0  maw-70">Plenos del 2016</h2>
+        </div>
+        <div class="maw-70 padding-1 padding-l-n">
+          <a class="padding-0-5" href="#">enero</a>
+          <a class="padding-0-5" href="#">febrero</a>
+          <a class="padding-0-5" href="#">marzo</a>
+          <a class="padding-0-5" href="#">abril</a>
+          <a class="padding-0-5" href="#">mayo</a>
+          <a class="padding-0-5" href="#">junio</a>
+          <a class="padding-0-5" href="#">julio</a>
+          <a class="padding-0-5" href="#">agosto</a>
+          <a class="padding-0-5" href="#">septiembre</a>
+          <a class="padding-0-5" href="#">octubre</a>
+          <a class="padding-0-5" href="#">noviembre</a>
+          <a class="padding-0-5" href="#">diciembre</a>
+        </div>
+
+        <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey grey">
+          <h2 class="font-2 margin-b0  maw-70">Diciembre</h2>
+          <div class="maw-70  margin-t1">
+              <div class="w-100 display-b bgc-white padding-1 border-l5 borderc-ch borderc-greyc">
+                  <span class="font-1-5 font-w8 display-ib border-r1 borderc-black padding-r1">23</span>
+              </div>
+          </div>
         </div>
 
       </section>
