cambio de colores para el resto de votos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <div class="display-b w-100">
           <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
-          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  grey  margin-r1"></div>
+          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  resto  margin-r1"></div>
           <span class="black  font-w8">10.83%</span>
           </div>
 
