posibles opciones para el storytelling

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -26,7 +26,12 @@
     Unanimidad
     Votos por trios
     Votos por parejas
-    Presentadas mas mociones
+    ¿Quién ha presentado más mociones?
+    ¿Quién ha perdido mas mociones?
+    ¿Quién ha ganado más mociones?
+    ¿Quién se ha abstenido más?
+    ¿Quién vota más en contra?
+    ¿Quién vota más a favor?
 
 
       <footer class="padding-1-0 borderc-grey border-t1 cruise">
