implementando tipusearch y agregando nuevos iconos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/c3.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -21,6 +21,13 @@
             </div>
           </div>
     </header>
+    <div class="border-b1 borderc-grey w-100 padding-2-0">
+      <div class="maw-60">
+        <form action="search.html">
+          <input class="w-40 padding-1" type="text" name="q" id="tipue_search_input">
+        </form>
+      </div>
+    </div>
     <div class="maw-60 padding-t1">
         <div>
           <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
