cambiando los metodos de la busqueda de tipueSearch

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
             </div>
           </div>
     </header>
-    <div class="border-b1 borderc-grey w-100 padding-2-0">
-      <div class="maw-60">
-        <form action="search.html">
-          <input class="w-40 padding-1" type="text" name="q" id="tipue_search_input">
+    <div class="border-b1 borderc-grey w-100 padding-2-0 grey">
+      <div class="maw-60 pos-r">
+        <form class="w-60" action="buscador.html">
+          <input class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+          <button class="btn-search bgc-white" type="submit">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101"/></svg>
+          </button>
         </form>
       </div>
     </div>
