cambios para el buscador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -20,8 +19,16 @@
               <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
             </div>
           </div>
+          <nav class="maw-60">
+              <a class="font-1" href="#">ESTADÍSTICAS</a>
+              <a id="buscador" class="cerrado font-1" href="#">PP</a>
+              <a class="font-1" href="#">ZEC</a>
+              <a class="font-1" href="#">PSOE</a>
+              <a class="font-1" href="#">C'S</a>
+              <a class="font-1" href="#">CHA</a>
+          </nav>
     </header>
-    <div class="border-b1 borderc-grey w-100 padding-2-0 grey">
+    <div class="border-b1 borderc-grey w-100 padding-2-0 grey container-buscador-js">
       <div class="maw-60 pos-r">
         <form class="w-60" action="buscador.html">
           <input class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
