corrección de erroes en textos y buscador

--- a/index.html
+++ b/index.html
@@ -19,15 +19,27 @@
               <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
             </div>
           </div>
-          <nav class="maw-60">
-              <a class="font-1" href="#">ESTADÍSTICAS</a>
-              <a id="buscador" class="cerrado font-1" href="#">PP</a>
-              <a class="font-1" href="#">ZEC</a>
-              <a class="font-1" href="#">PSOE</a>
-              <a class="font-1" href="#">C'S</a>
-              <a class="font-1" href="#">CHA</a>
-          </nav>
     </header>
+    <div class="w-100 border-b1 borderc-grey padding-1">
+      <nav class="maw-60">
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+      </nav>
+    </div>
+    <div class="w-100 border-b1 borderc-grey padding-1">
+      <nav class="maw-60">
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+      </nav>
+    </div>
     <div class="border-b1 borderc-grey w-100 padding-2-0 grey container-buscador-js">
       <div class="maw-60 pos-r">
         <form class="w-60" action="buscador.html">
@@ -115,7 +127,7 @@
 
       </section>
       <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">© Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+        <p class="maw-60 padding-1-0">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
