--- a/estadisticas.html
+++ b/estadisticas.html
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/c3.min.css">
 </head>
 
 <body>
@@ -33,12 +32,48 @@
     ¿Quién vota más en contra?
     ¿Quién vota más a favor?
 
+    <article id="lanzando" style="margin-top: 200vh;" class="margin-y1 display-ib  w-100">
+        <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
+          <div class="display-b w-100">
+            <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
+            <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
+            <span class="black  font-w8">26.88 % · 10 concejales</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/zec.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">ZEC</a>
+          <div id="zec" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-zec  margin-r1"></div>
+          <span class="black  font-w8">24.57 % · 9 concejales</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/psoe.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PSOE</a>
+          <div id="psoe" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-psoe  margin-r1"></div>
+          <span class="black  font-w8">18.65 % · 6 concejales</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/cs.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">C'S</a>
+          <div id="cs" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cs  margin-r1"></div>
+          <span class="black  font-w8">12.29% · 4 concejales</span>
+          </div>
+          <div class="display-b w-100">
+          <a href="partidos/cha.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">CHA</a>
+          <div id="cha" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
+          <span class="black  font-w8">6.78% · 2 concejales</span>
+          </div>
+
+          <div class="display-b w-100">
+          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
+          <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  resto  margin-r1"></div>
+          <span class="black  font-w8">10.83%</span>
+          </div>
+
+    </article>
+
 
       <footer class="padding-1-0 borderc-grey border-t1 cruise">
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/estadisticas.js"></script>
 </body>
 </html>
