incluyendo nuevo botón en el menu

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -20,6 +20,17 @@
             </div>
           </div>
     </header>
+    <nav class="w-100 border-b1 borderc-grey padding-1">
+      <div class="maw-60">
+          <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+          <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+      </div>
+    </nav>
     <p>Estadisticas acumuladas</p>
 
     Unanimidad
