--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
           </div>
     </header>
-    <div class="w-100 border-b1 borderc-grey padding-1">
-      <nav class="maw-60">
+    <nav class="w-100 border-b1 borderc-grey padding-1">
+      <div class="maw-60">
           <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
           <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
           <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
@@ -29,12 +29,12 @@
           <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
           <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
           <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
-      </nav>
-    </div>
+      </div>
+    </nav>
     <div class="border-b1 borderc-grey w-100 padding-2-0 grey containerBuscador">
       <div class="maw-60 pos-r">
         <form class="w-60" action="buscador.html">
-          <input class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+          <input placeholder="Busca y encuentra..." class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
           <button class="btn-search bgc-white" type="submit">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101"/></svg>
           </button>
@@ -122,28 +122,5 @@
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript">
-
-      function appendClass(element, newClass){
-        if (element.className.length == 0) {
-          element.className = newClass;
-        }
-        else if (element.className.indexOf(newClass) < 0) {
-          element.className += ' ' + newClass;
-        }
-      }
-
-
-      function click(){
-        var btnBuscador = document.querySelector("#buscador");
-        var containerBuscador = document.querySelector(".containerBuscador");
-        btnBuscador.onclick = function(e){
-          appendClass(containerBuscador, "desplegado")
-        }
-      }
-
-      click();
-
-    </script>
 </body>
 </html>
