--- a/partidos/cs.html
+++ b/partidos/cs.html
@@ -20,16 +20,17 @@
               </div>
             </div>
       </header>
-      <div class="w-100 border-b1 borderc-grey padding-1">
-        <nav class="maw-60">
-            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+      <nav class="w-100 border-b1 borderc-grey padding-1">
+        <div class="maw-60">
+            <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
-        </nav>
-      </div>
+        </div>
+      </nav>
       <div class="maw-60 margin-y1 display-b">
 
       <img class="object-fit" src="../img/logo-cs.png" alt="Logotipo de Ciudadanos - Partido de la ciudadanía">
