--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -21,16 +21,17 @@
               </div>
             </div>
       </header>
-      <div class="w-100 border-b1 borderc-grey padding-1">
-        <nav class="maw-60">
-            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+      <nav class="w-100 border-b1 borderc-grey padding-1">
+        <div class="maw-60">
+            <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
-        </nav>
-      </div>
+        </div>
+      </nav>
       <img class="object-fit" src="../img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
       <p class="font-1">A continuación un gráfico de las votaciones del <span class="font-w8">Partido Socialista Obrero Español</span> en el Ayuntamiento de Zaragoza.
       </p>
